feat: implement Forgot Password functionality; add OTP handling and email verification endpoints

--- a/Frontend/pages/login-and-register/forgot-password.html
+++ b/Frontend/pages/login-and-register/forgot-password.html
@@ -4,484 +4,98 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forgot Password</title>
-    <link rel="icon" href="/Frontend/assets/image/blogging.png" />
-    <!-- Inter Font -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
-      rel="stylesheet"
-    />
     <style>
       body {
-        font-family: "Inter", sans-serif;
-        background-color: #000000; /* Solid black background */
+        font-family: Arial, sans-serif;
+        background: #f9f9f9;
         display: flex;
         justify-content: center;
         align-items: center;
-        min-height: 100vh;
-        margin: 0;
-        overflow: hidden; /* Hide scrollbars for the canvas */
-        color: #f0f0f0; /* Light text for visibility */
+        height: 100vh;
       }
-
-      /* 3D Canvas Styles */
-      #three-canvas {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 0; /* Behind the content */
-        opacity: 0.7; /* Make it subtle */
-      }
-
       .container {
-        background: rgba(
-          255,
-          255,
-          255,
-          0.08
-        ); /* Subtle white translucent background */
-        backdrop-filter: blur(10px);
-        -webkit-backdrop-filter: blur(10px);
-        padding: 30px;
-        border-radius: 20px; /* More rounded corners */
-        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4); /* Darker shadow */
-        width: 100%;
-        max-width: 400px;
-        text-align: center;
-        z-index: 1; /* Above 3D background */
-        position: relative;
-        border: 1px solid rgba(255, 255, 255, 0.1); /* Subtle white border */
-        animation: floatEffect 5s ease-in-out infinite; /* Gentle floating animation */
+        background: #fff;
+        padding: 2rem;
+        border-radius: 8px;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+        width: 350px;
       }
-
-      @keyframes floatEffect {
-        0% {
-          transform: translateY(0px);
-        }
-        50% {
-          transform: translateY(-10px);
-        }
-        100% {
-          transform: translateY(0px);
-        }
-      }
-
       h2 {
-        margin-bottom: 25px; /* Increased margin */
-        color: #ffffff; /* Pure white heading */
-        font-weight: 700;
-        letter-spacing: 1px;
-        text-shadow: 0 0 5px rgba(255, 255, 255, 0.2); /* Subtle glow */
+        text-align: center;
       }
-
-      .form-group {
-        margin-bottom: 20px; /* Increased margin */
-        text-align: left;
-      }
-
-      label {
-        display: block;
-        margin-bottom: 8px; /* Increased margin */
-        color: #f8f8f8; /* Very light gray label */
-        font-weight: 500;
-        font-size: 0.95rem;
-      }
-
-      input[type="text"],
-      input[type="password"] {
-        width: 100%;
-        padding: 12px; /* Increased padding */
-        background: rgba(
-          255,
-          255,
-          255,
-          0.1
-        ); /* Subtle white input background */
-        border: 1px solid rgba(255, 255, 255, 0.15); /* Slightly visible border */
-        border-radius: 8px; /* Rounded input corners */
-        box-sizing: border-box;
-        color: #f0f0f0; /* Light text in input */
-        font-size: 1rem;
-        transition: all 0.3s ease;
-      }
-      input[type="text"]:focus,
-      input[type="password"]:focus {
-        box-shadow: 0 0 0 2px rgba(255, 255, 255, 0.3); /* Custom focus ring */
-        border: 1px solid #ffffff; /* White border on focus */
-        background: rgba(255, 255, 255, 0.2); /* Slightly brighter on focus */
-        color: #ffffff; /* Pure white text on focus */
-        outline: none;
-      }
-      input::placeholder {
-        color: #cccccc; /* Lighter placeholder text */
-        opacity: 0.7;
-      }
-
-      .submit-btn {
-        background-color: #333333; /* Dark gray button */
-        color: white;
-        padding: 12px 25px; /* Increased padding */
-        border: none;
-        border-radius: 30px; /* Pill-shaped button */
-        cursor: pointer;
-        font-size: 1rem;
-        width: 100%;
-        margin-top: 15px; /* Increased margin */
-        font-weight: 600;
-        letter-spacing: 0.5px;
-        transition: all 0.3s ease;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-      }
-
-      .submit-btn:hover {
-        background-color: #555555; /* Medium gray on hover */
-        transform: translateY(-2px); /* Lift effect */
-        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.4);
-      }
-
-      .step {
+      .form-step {
         display: none;
       }
-
-      .step.active {
+      .form-step.active {
         display: block;
-        animation: fadeIn 0.5s ease-out; /* Fade in animation for steps */
       }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(10px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
+      input {
+        width: 100%;
+        padding: 10px;
+        margin: 8px 0;
+        border: 1px solid #ccc;
+        border-radius: 6px;
       }
-
-      #userEmail {
-        font-weight: bold;
-        color: #cccccc; /* Medium light gray email text */
-        display: block; /* Ensure it takes full width for centering */
+      button {
+        width: 100%;
+        padding: 10px;
+        background: black;
+        color: white;
+        border: none;
+        border-radius: 6px;
+        cursor: pointer;
+      }
+      button:hover {
+        background: #333;
+      }
+      .info {
         margin-top: 10px;
-        margin-bottom: 20px;
-      }
-
-      /* Styling for navigation back to login/home if needed */
-      .back-link {
-        display: inline-block;
-        margin-top: 25px;
-        color: #999999;
-        text-decoration: none;
-        font-size: 0.9rem;
-        transition: color 0.3s ease;
-      }
-      .back-link:hover {
-        color: #ffffff;
-        text-decoration: underline;
+        text-align: center;
+        font-size: 14px;
+        color: #555;
       }
     </style>
   </head>
   <body>
-    <!-- 3D Canvas -->
-    <canvas id="three-canvas"></canvas>
-
     <div class="container">
       <h2>Forgot Password</h2>
 
-      <!-- Username Step -->
-      <div class="step active" id="usernameStep">
-        <div class="form-group">
-          <label for="username">Username</label>
-          <input
-            type="text"
-            id="username"
-            name="username"
-            required
-            placeholder="Enter your username"
-          />
-        </div>
-        <button type="button" class="submit-btn" id="findEmailBtn">
-          Find User Email
-        </button>
+      <!-- Step 1: Email (changed from Username) -->
+      <div id="emailInputStep" class="form-step active">
+        <p>Enter your email address:</p>
+        <input type="email" id="emailInput" placeholder="Email" required />
+        <button onclick="validateEmail()">Next</button>
       </div>
 
-      <!-- Email Step -->
-      <div class="step" id="emailStep">
-        <p>User Email: <span id="userEmail"></span></p>
-        <button type="button" class="submit-btn" id="sendOtpBtn">
-          Send OTP
-        </button>
+      <!-- Step 2: Confirmation (simplified) -->
+      <div id="confirmStep" class="form-step">
+        <p>We will send an OTP to:</p>
+        <div class="info" id="confirmEmail"></div>
+        <button onclick="sendOtp()">Send OTP</button>
       </div>
 
-      <!-- OTP Step -->
-      <div class="step" id="otpStep">
-        <div class="form-group">
-          <label for="otp">Enter OTP</label>
-          <input
-            type="text"
-            id="otp"
-            name="otp"
-            required
-            placeholder="Enter the OTP"
-          />
-        </div>
-        <button type="button" class="submit-btn" id="verifyOtpBtn">
-          Verify OTP
-        </button>
+      <!-- Step 3: OTP -->
+      <div id="otpStep" class="form-step">
+        <p>Enter the OTP sent to your email:</p>
+        <input type="text" id="otp" placeholder="6-digit OTP" required />
+        <button onclick="verifyOtp()">Verify OTP</button>
       </div>
 
-      <!-- New Password Step -->
-      <div class="step" id="newPasswordStep">
-        <div class="form-group">
-          <label for="newPassword">New Password</label>
-          <input
-            type="password"
-            id="newPassword"
-            name="newPassword"
-            required
-            placeholder="Enter new password"
-          />
-        </div>
-        <div class="form-group">
-          <label for="confirmPassword">Confirm Password</label>
-          <input
-            type="password"
-            id="confirmPassword"
-            name="confirmPassword"
-            required
-            placeholder="Confirm new password"
-          />
-        </div>
-        <button type="button" class="submit-btn" id="updatePasswordBtn">
-          Update Password
-        </button>
+      <!-- Step 4: Reset Password -->
+      <div id="newPasswordStep" class="form-step">
+        <p>Enter your new password:</p>
+        <input
+          type="password"
+          id="newPassword"
+          placeholder="New Password"
+          required
+        />
+        <button onclick="resetPassword()">Reset Password</button>
       </div>
 
-      <a
-        href="/Frontend/pages/login-and-register/login-and-register.html"
-        class="back-link"
-        >Back to Login</a
-      >
+      <div class="info" id="message"></div>
     </div>
 
-    <!-- Three.js CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <script>
-      // --- Three.js for 3D background ---
-      let scene, camera, renderer, icosahedron, particles, lines;
-      let mouseX = 0,
-        mouseY = 0;
-      let windowHalfX = window.innerWidth / 2;
-      let windowHalfY = window.innerHeight / 2;
-
-      function initThreeJS() {
-        // Scene
-        scene = new THREE.Scene();
-
-        // Camera
-        camera = new THREE.PerspectiveCamera(
-          75,
-          window.innerWidth / window.innerHeight,
-          0.1,
-          1000
-        );
-        camera.position.z = 5;
-
-        // Renderer
-        renderer = new THREE.WebGLRenderer({
-          canvas: document.getElementById("three-canvas"),
-          alpha: true,
-          antialias: true,
-        });
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        renderer.setPixelRatio(window.devicePixelRatio);
-
-        // Icosahedron (main geometric shape)
-        const icoGeometry = new THREE.IcosahedronGeometry(2, 1); // Radius 2, 1 subdivision for slightly more detail
-        const icoMaterial = new THREE.MeshBasicMaterial({
-          color: 0xcccccc, // Light gray
-          wireframe: true,
-          transparent: true,
-          opacity: 0.2,
-          blending: THREE.AdditiveBlending,
-        });
-        icosahedron = new THREE.Mesh(icoGeometry, icoMaterial);
-        scene.add(icosahedron);
-
-        // Particles
-        const particleCount = 500;
-        const particleGeometry = new THREE.BufferGeometry();
-        const particlePositions = new Float32Array(particleCount * 3);
-        const particleColors = new Float32Array(particleCount * 3);
-        const particleColor = new THREE.Color(0x888888); // Medium gray particles
-
-        for (let i = 0; i < particleCount; i++) {
-          // Position particles randomly around the icosahedron
-          const r = 3 + Math.random() * 3; // Radius from 3 to 6
-          const theta = Math.random() * Math.PI * 2;
-          const phi = Math.acos(Math.random() * 2 - 1);
-          particlePositions[i * 3] = r * Math.sin(phi) * Math.cos(theta);
-          particlePositions[i * 3 + 1] = r * Math.sin(phi) * Math.sin(theta);
-          particlePositions[i * 3 + 2] = r * Math.cos(phi);
-          particleColor.toArray(particleColors, i * 3);
-        }
-        particleGeometry.setAttribute(
-          "position",
-          new THREE.BufferAttribute(particlePositions, 3)
-        );
-        particleGeometry.setAttribute(
-          "color",
-          new THREE.BufferAttribute(particleColors, 3)
-        );
-
-        const particleMaterial = new THREE.PointsMaterial({
-          size: 0.05,
-          vertexColors: true,
-          transparent: true,
-          opacity: 0.5,
-          blending: THREE.AdditiveBlending,
-          sizeAttenuation: true,
-        });
-        particles = new THREE.Points(particleGeometry, particleMaterial);
-        scene.add(particles);
-
-        // Dynamic Connecting Lines between particles
-        const lineMaterial = new THREE.LineBasicMaterial({
-          color: 0x666666, // Darker gray for lines
-          transparent: true,
-          opacity: 0.05, // Very subtle lines
-          blending: THREE.AdditiveBlending,
-        });
-        const lineGeometry = new THREE.BufferGeometry();
-        const maxLineInstances = particleCount * 4;
-        const linePositions = new Float32Array(maxLineInstances * 2 * 3);
-        lineGeometry.setAttribute(
-          "position",
-          new THREE.BufferAttribute(linePositions, 3)
-        );
-        lines = new THREE.LineSegments(lineGeometry, lineMaterial);
-        scene.add(lines);
-
-        // Event Listeners for interactivity and responsiveness
-        window.addEventListener("resize", onWindowResizeThreeJS, false);
-        document.addEventListener(
-          "mousemove",
-          onDocumentMouseMoveThreeJS,
-          false
-        );
-        document.addEventListener(
-          "touchstart",
-          onDocumentTouchStartThreeJS,
-          false
-        );
-        document.addEventListener(
-          "touchmove",
-          onDocumentTouchMoveThreeJS,
-          false
-        );
-      }
-
-      function onWindowResizeThreeJS() {
-        windowHalfX = window.innerWidth / 2;
-        windowHalfY = window.innerHeight / 2;
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-      }
-
-      function onDocumentMouseMoveThreeJS(event) {
-        mouseX = event.clientX - windowHalfX;
-        mouseY = event.clientY - windowHalfY;
-      }
-
-      function onDocumentTouchStartThreeJS(event) {
-        if (event.touches.length === 1) {
-          mouseX = event.touches[0].pageX - windowHalfX;
-          mouseY = event.touches[0].pageY - windowHalfY;
-        }
-      }
-
-      function onDocumentTouchMoveThreeJS(event) {
-        if (event.touches.length === 1) {
-          event.preventDefault();
-          mouseX = event.touches[0].pageX - windowHalfX;
-          mouseY = event.touches[0].pageY - windowHalfY;
-        }
-      }
-
-      function animateThreeJS() {
-        requestAnimationFrame(animateThreeJS);
-
-        // Rotate icosahedron
-        icosahedron.rotation.x += 0.0005;
-        icosahedron.rotation.y += 0.001;
-
-        // Rotate particles system
-        particles.rotation.y += 0.0007;
-        particles.rotation.x += 0.0002;
-
-        // Update dynamic lines
-        const currentLinePositions = lines.geometry.attributes.position.array;
-        let lineIndex = 0;
-        const particlePositionsArray =
-          particles.geometry.attributes.position.array;
-        const tempParticle1 = new THREE.Vector3();
-        const tempParticle2 = new THREE.Vector3();
-
-        // Resetting to zero effectively hides them for recalculation
-        for (let i = 0; i < currentLinePositions.length; i++) {
-          currentLinePositions[i] = 0;
-        }
-
-        for (let i = 0; i < particlePositionsArray.length / 3; i++) {
-          tempParticle1
-            .set(
-              particlePositionsArray[i * 3],
-              particlePositionsArray[i * 3 + 1],
-              particlePositionsArray[i * 3 + 2]
-            )
-            .applyMatrix4(particles.matrixWorld);
-
-          for (let j = i + 1; j < particlePositionsArray.length / 3; j++) {
-            tempParticle2
-              .set(
-                particlePositionsArray[j * 3],
-                particlePositionsArray[j * 3 + 1],
-                particlePositionsArray[j * 3 + 2]
-              )
-              .applyMatrix4(particles.matrixWorld);
-
-            if (tempParticle1.distanceTo(tempParticle2) < 0.8) {
-              currentLinePositions[lineIndex++] = tempParticle1.x;
-              currentLinePositions[lineIndex++] = tempParticle1.y;
-              currentLinePositions[lineIndex++] = tempParticle1.z;
-
-              currentLinePositions[lineIndex++] = tempParticle2.x;
-              currentLinePositions[lineIndex++] = tempParticle2.y;
-              currentLinePositions[lineIndex++] = tempParticle2.z;
-            }
-          }
-        }
-        lines.geometry.attributes.position.needsUpdate = true;
-        lines.geometry.setDrawRange(0, lineIndex);
-
-        // Camera movement based on mouse/touch
-        camera.position.x += (mouseX * 0.0005 - camera.position.x) * 0.05;
-        camera.position.y += (-mouseY * 0.0005 - camera.position.y) * 0.05;
-        camera.lookAt(scene.position);
-
-        renderer.render(scene, camera);
-      }
-
-      // Initialize Three.js when the window loads
-      window.onload = function () {
-        initThreeJS();
-        animateThreeJS();
-      };
-    </script>
-    <!-- Original forgot-password.js for form logic -->
     <script src="/Frontend/JavaScript/login-and-register/forgot-password.js"></script>
   </body>
 </html>
