--- a/Frontend/pages/login-and-register/login-and-register.html
+++ b/Frontend/pages/login-and-register/login-and-register.html
@@ -35,25 +35,14 @@
             />
           </div>
           <div class="forgot-password">
-            <a href="#" id="forgotPasswordLink">Forgot Password?</a>
+            <a
+              href="/Frontend/pages/login-and-register/forgot-password.html"
+              id="forgotPasswordLink"
+              >Forgot Password?</a
+            >
           </div>
           <button type="submit" class="submit-btn">Login</button>
         </form>
-
-        <!-- Forgot Password Modal -->
-        <div class="modal" id="forgotPasswordModal">
-          <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Forgot Password</h2>
-            <form id="forgotPasswordForm">
-              <div class="form-group">
-                <label for="forgotEmail">Email Address</label>
-                <input type="email" id="forgotEmail" name="email" required />
-              </div>
-              <button type="submit" class="submit-btn">Send Reset Link</button>
-            </form>
-          </div>
-        </div>
 
         <!-- Register Form -->
         <form class="register-form" id="registerForm">
