feat: add user profile navigation and JavaScript functionality; link user icon to user profile page and include user-profile.js

--- a/Frontend/pages/home-page.html
+++ b/Frontend/pages/home-page.html
@@ -19,11 +19,13 @@
       <div class="container">
         <a class="navbar-brand" href="#">BlogHub</a>
         <div class="ms-auto d-flex align-items-center">
-          <img
-            src="/Frontend/assets/image/user-icon.png"
-            alt="Profile"
-            class="profile-image me-3"
-          />
+          <a href="/Frontend/pages/User/user-profile.html">
+            <img
+              src="/Frontend/assets/image/user-icon.png"
+              alt="Profile"
+              class="profile-image me-3"
+            />
+          </a>
           <button class="logout-btn" id="logoutBtn">
             <i class="fas fa-sign-out-alt me-1"></i>Logout
           </button>
