--- a/Frontend/pages/User/user-profile.html
+++ b/Frontend/pages/User/user-profile.html
@@ -440,5 +440,6 @@
     </script>
     <!-- Bootstrap JS CDN (optional, for components that require JS) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/Frontend/JavaScript/User/user-profile.js"></script>
   </body>
 </html>
