--- a/Frontend/pages/User/user-profile.html
+++ b/Frontend/pages/User/user-profile.html
@@ -167,9 +167,8 @@
         <input
           type="file"
           class="form-control"
-          id="uploadImage"
+          id="imageUpload"
           accept="image/*"
-          onchange="previewImage(event)"
         />
       </div>
       <form>
@@ -181,6 +180,7 @@
             id="username"
             placeholder="Enter your username"
             value="JohnDoe"
+            readonly
           />
         </div>
         <div class="mb-3 text-start">
@@ -191,6 +191,7 @@
             id="email"
             placeholder="Enter your email"
             value="john.doe@example.com"
+            readonly
           />
         </div>
         <div class="d-flex justify-content-between">
@@ -203,7 +204,7 @@
         </div>
         <div class="mt-3">
           <a
-            href="forgot-password.html"
+            href="/Frontend/pages/login-and-register/forgot-password.html"
             class="btn btn-secondary-custom btn-sm btn-custom"
             >Forgot Password?</a
           >
