--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -87,37 +87,14 @@
           >
             <i class="fas fa-plus me-1"></i> New Article
           </button>
-          <div class="dropdown me-2">
+          <a href="/Frontend/pages/Publisher/publisher-profile.html" class="text-decoration-none">
             <img
               src="/Frontend/assets/image/user-icon.png"
               alt="Profile"
-              class="profile-img"
-              id="profileDropdown"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
+              class="profile-img me-2"
+              title="Go to Profile"
             />
-            <ul
-              class="dropdown-menu dropdown-menu-end"
-              aria-labelledby="profileDropdown"
-            >
-              <li>
-                <a class="dropdown-item" href="#"
-                  ><i class="fas fa-user me-2"></i>Profile</a
-                >
-              </li>
-              <li>
-                <a class="dropdown-item" href="#"
-                  ><i class="fas fa-cog me-2"></i>Settings</a
-                >
-              </li>
-              <li><hr class="dropdown-divider" /></li>
-              <li>
-                <a class="dropdown-item text-danger" href="#"
-                  ><i class="fas fa-sign-out-alt me-2"></i>Logout</a
-                >
-              </li>
-            </ul>
-          </div>
+          </a>
           <button id="logoutBtn" class="btn btn-outline-danger">
             <i class="fas fa-sign-out-alt me-1"></i> Logout
           </button>
