--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -3,58 +3,181 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlogHub - Welcome</title>
-    <!-- Bootstrap CSS CDN -->
+    <title>BlogHub - Share Your Stories</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css"
       rel="stylesheet"
-      xintegrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-      crossorigin="anonymous"
     />
-    <!-- Inter Font -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
       rel="stylesheet"
     />
     <link rel="icon" href="/Frontend/assets/image/blogging.png" />
     <link rel="stylesheet" href="/Frontend/css/index.css" />
   </head>
   <body>
-    <!-- WebGL Canvas for 3D animation -->
-    <canvas id="webgl-canvas"></canvas>
-
-    <!-- Content Overlay -->
-    <div class="content-overlay">
-      <div
-        class="card-custom p-4 p-md-5 rounded-4 shadow-lg mx-auto"
-        style="max-width: 500px"
-      >
-        <h1 class="display-4 fw-bold mb-4 gradient-text">
-          Welcome to BlogHub!
-        </h1>
-        <p class="lead text-light mb-5">
-          Your central hub for captivating stories, insightful articles, and
-          shared knowledge. Dive into a universe of ideas!
-        </p>
-        <!-- Changed button text and added direct HTML link -->
-        <a
-          href="/Frontend/pages/login-and-register/login-and-register.html"
-          class="btn btn-lg btn-gradient-custom text-white rounded-pill shadow-lg d-inline-block"
-          id="login-button"
-        >
-          Start Now
-        </a>
-      </div>
+    <!-- Loading Overlay -->
+    <div class="loading-overlay" id="loadingOverlay">
+      <div class="loader"></div>
     </div>
 
-    <!-- Three.js CDN -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <i class="fas fa-blog me-2"></i>BlogHub
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#features">Features</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section id="home" class="hero-section">
+      <div class="floating-elements">
+        <div class="floating-element"></div>
+        <div class="floating-element"></div>
+        <div class="floating-element"></div>
+      </div>
+
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <div class="hero-content">
+              <h1 class="hero-title">Share Your Stories with the World</h1>
+              <p class="hero-subtitle">
+                The modern blogging platform for creators, writers, and
+                storytellers
+              </p>
+              <p class="hero-description">
+                Join thousands of writers who trust BlogHub to share their
+                thoughts, ideas, and stories. Create beautiful articles, engage
+                with your audience, and build your online presence.
+              </p>
+              <a href="#" class="btn-start" id="startNowBtn">
+                <span>Start Now</span>
+                <i class="fas fa-arrow-right"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-lg-6">
+            <div class="text-center">
+              <i
+                class="fas fa-laptop-code"
+                style="
+                  font-size: 15rem;
+                  color: rgba(255, 255, 255, 0.2);
+                  animation: pulse 2s infinite;
+                "
+              ></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Features Section -->
+    <section id="features" class="features-section">
+      <div class="container">
+        <h2 class="section-title">Why Choose BlogHub?</h2>
+        <div class="row g-4">
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="feature-icon">
+                <i class="fas fa-edit"></i>
+              </div>
+              <h3 class="feature-title">Easy Editor</h3>
+              <p class="feature-description">
+                Write and format your articles with our intuitive rich-text
+                editor. Focus on your content while we handle the formatting.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="feature-icon">
+                <i class="fas fa-users"></i>
+              </div>
+              <h3 class="feature-title">Community</h3>
+              <p class="feature-description">
+                Connect with like-minded writers and readers. Build your
+                audience and engage with the community through comments and
+                shares.
+              </p>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6">
+            <div class="feature-card">
+              <div class="feature-icon">
+                <i class="fas fa-chart-line"></i>
+              </div>
+              <h3 class="feature-title">Analytics</h3>
+              <p class="feature-description">
+                Track your blog's performance with detailed analytics.
+                Understand your audience and optimize your content strategy.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Stats Section -->
+    <section class="stats-section">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="stat-item">
+              <span class="stat-number" data-count="50000">0</span>
+              <div class="stat-label">Active Writers</div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="stat-item">
+              <span class="stat-number" data-count="1000000">0</span>
+              <div class="stat-label">Articles Published</div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="stat-item">
+              <span class="stat-number" data-count="5000000">0</span>
+              <div class="stat-label">Monthly Readers</div>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6">
+            <div class="stat-item">
+              <span class="stat-number" data-count="150">0</span>
+              <div class="stat-label">Countries</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script src="/Frontend/JavaScript/index.js"></script>
-    <!-- Bootstrap JS CDN (optional, for components that require JS) -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      xintegrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/6si/I3wWfBU0"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
