--- a/Frontend/pages/Publisher/publisher-dashboard.html
+++ b/Frontend/pages/Publisher/publisher-dashboard.html
@@ -13,65 +13,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <style>
-      .card-img-top {
-        height: 200px;
-        object-fit: cover;
-      }
-      .profile-img {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        cursor: pointer;
-      }
-      .navbar {
-        background-color: #f8f9fa;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      }
-      .card {
-        transition: transform 0.2s;
-        border: 1px solid rgba(0, 0, 0, 0.125);
-        border-radius: 0.75rem;
-      }
-      .card:hover {
-        transform: translateY(-5px);
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
-      }
-      #articleTabs .nav-link.active {
-        font-weight: 600;
-        background-color: #0d6efd;
-        color: white;
-      }
-      #articleTabs .nav-link {
-        color: #495057;
-      }
-      .btn-primary {
-        background-color: #0d6efd;
-        border-color: #0d6efd;
-      }
-      .btn-primary:hover {
-        background-color: #0b5ed7;
-        border-color: #0a58ca;
-      }
-      .modal-content {
-        border-radius: 0.75rem;
-        border: none;
-        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
-      }
-      .form-control:focus,
-      .form-select:focus {
-        border-color: #86b7fe;
-        box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-      }
-      .notification {
-        position: fixed;
-        top: 20px;
-        right: 20px;
-        z-index: 1050;
-        min-width: 300px;
-        border-radius: 0.5rem;
-      }
-    </style>
+    <link
+      rel="stylesheet"
+      href="/Frontend/css/Publisher/publisher-dashboard.css"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light mb-4">
@@ -87,7 +32,10 @@
           >
             <i class="fas fa-plus me-1"></i> New Article
           </button>
-          <a href="/Frontend/pages/Publisher/publisher-profile.html" class="text-decoration-none">
+          <a
+            href="/Frontend/pages/Publisher/publisher-profile.html"
+            class="text-decoration-none"
+          >
             <img
               src="/Frontend/assets/image/user-icon.png"
               alt="Profile"
