--- a/Frontend/pages/article-detail.html
+++ b/Frontend/pages/article-detail.html
@@ -12,41 +12,43 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
     />
-    <link rel="stylesheet" href="/Frontend/css/article-detaile.css" />
+    <link rel="stylesheet" href="/Frontend/css/article-detail.css" />
   </head>
   <body>
-    <div class="container mt-4" id="articleContainer">
-      <div class="alert alert-info">
-        <i class="fas fa-spinner fa-spin me-2"></i>Loading article...
-      </div>
-    </div>
-
-    <!-- Comments Section -->
-    <div class="container mt-4">
-      <h4>Comments</h4>
-      <ul class="list-group mb-3" id="commentsList">
-        <li class="list-group-item">Loading comments...</li>
-      </ul>
-
-      <form id="commentForm">
-        <div class="mb-3">
-          <textarea
-            class="form-control"
-            id="commentText"
-            rows="3"
-            placeholder="Write your comment..."
-            required
-          ></textarea>
+    <div class="container my-5">
+      <div id="articleContainer">
+        <div class="alert alert-info border-0 rounded-0 text-center">
+          <i class="fas fa-spinner fa-spin me-2"></i>Loading article...
         </div>
-        <button type="submit" class="btn btn-primary">
-          <i class="fas fa-paper-plane me-1"></i> Post Comment
-        </button>
-      </form>
+      </div>
+
+      <hr class="my-5" />
+
+      <div class="comments-section">
+        <h4 class="mb-4">Comments</h4>
+        <ul class="list-group mb-4" id="commentsList">
+          <li class="list-group-item border-0 text-center">Loading comments...</li>
+        </ul>
+
+        <form id="commentForm">
+          <div class="mb-3">
+            <textarea
+              class="form-control"
+              id="commentText"
+              rows="3"
+              placeholder="Write your comment..."
+              required
+            ></textarea>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">
+            <i class="fas fa-paper-plane me-1"></i> Post Comment
+          </button>
+        </form>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    ;
     <script src="/Frontend/JavaScript/article-detaile.js"></script>
   </body>
 </html>
